# Anomaliz

./: .dockerignore  .gitignore  ADS_system.md  Dockerfile  Makefile  README  README.md  README_research.md  docker-compose.yml  mlruns.db  pyproject.toml  read-the-project-spec-elegant-manatee.md
anomaliz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
anomaliz/agent/: graph.py  llm.py  nodes.py  state.py
anomaliz/api/: deps.py  main.py  schemas.py
anomaliz/config/: defaults.yaml  settings.py
anomaliz/core/: protocols.py
anomaliz/data/: dataset.py  generator.py  nab.py
anomaliz/detection/: scorer.py
anomaliz/models/: isolation_forest.py  lstm_autoencoder.py  lstm_forecaster.py
anomaliz/preprocessing/: normalizer.py  windowing.py
anomaliz/tracking/: loggers.py
anomaliz/training/: cli.py  pipeline.py
anomaliz/visualization/: dashboard.py
tests/: conftest.py  test_agent.py  test_agent_failures.py  test_api.py  test_fusion.py  test_generator.py  test_if_detector.py  test_lstm_autoencoder.py  test_lstm_forecaster.py  test_nab.py  test_preprocessing.py  test_settings.py  test_threshold_tuning.py  test_tracking.py  test_training_smoke.py  test_visualization.py
